crates/biome_js_parser/tests/js_test_suite/error/ts_class_name_reserved_as_type.ts
class undefined {}
class string {}
class any {}
